# server/app/transformers/user_transformer.ts
@@ -9,6 +9,8 @@ export default class UserTransformer extends BaseTransformer<User> {
         'fullName',
         'email',
         'initials',
+        'bio',
+        'profileImage',
         'createdAt',
       ]),
       role: RoleTransformer.transform(this.whenLoaded(this.resource?.roles?.[0])),
